sandbox/output
StringCalculatorTest.java:33: error: cannot find symbol
        assertEquals(3, StringCalculator.add("//;\n1;2", parserWithCustomizedDelimiter));
                                                         ^
  symbol:   variable parserWithCustomizedDelimiter
  location: class StringCalculatorTest
1 error
